2008-04-13  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/navigate.* -> libavogadro/src/navigate.*,
	libavogadro/include/avogadro/navigate.h,
	libavogadro/src/tools/CMakeLists.txt,
	libavogadro/src/tools/aligntool.cpp,
	libavogadro/src/tools/autoopttool.cpp,
	libavogadro/src/tools/bondcentrictool.cpp,
	libavogadro/src/tools/clickmeasuretool.cpp,
	libavogadro/src/tools/drawtool.cpp,
	libavogadro/src/tools/manipulatetool.cpp,
	libavogadro/src/tools/navigatetool.cpp,
	libavogadro/src/tools/selectrotatetool.cpp: Moved the navigate
	functions from the tools directory into the library. They should be
	exposed as part of our API and would be useful in scripting.

	* libavogadro/src/tools/CMakeLists.txt: Removed duplicate definition
	of bondcentrictool.

2008-04-13  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/surfaceengine.*,
	libavogadro/src/engines/surfacesettingswidget.ui: Clipping now works
	for any specified plane.

2008-04-12  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/surfaceengine.*,
	libavogadro/src/engines/surfacesettingswidget.ui: Added clipping
	plane. This feature could later be moved to glwidget to clip any
	engine... This would probably require engines to have a clipped and
	solid property (like they currently have radius)

2008-04-09  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glpainter.cpp, libavogadro/src/glwidget.cpp: Parts
	of the patch from Benoit Jacob - fix handling of quality change.

	* libavogadro/src/glwidget.cpp: Fixed bug where display lists were
	not being invalidated when the display quality was adjusted.

	* libavogadro/src/engines/forceengine.cpp,
	libavogadro/src/engines/orbitalengine.cpp,
	libavogadro/src/engines/surfaceengine.cpp: Fixed some compiler
	warnings.

2008-04-09  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/camera.h, libavogadro/src/textrenderer.h,
	libavogadro/src/tools/drawtool.cpp: Fixed a few compiler warnings.
