@@ -28,6 +28,7 @@
 
 #include <QAbstractButton>
 #include <QDialogButtonBox>
+#include <QDebug>
 
 namespace Avogadro {
 
@@ -40,6 +41,8 @@ namespace Avogadro {
 
     connect(ui.dialogButtonBox, SIGNAL(clicked(QAbstractButton *)),
         this, SLOT(buttonClicked(QAbstractButton *)));
+    connect(ui.qualitySlider, SIGNAL(valueChanged(int)), this,
+        SLOT(qualityChanged(int)));
   }
 
   void SettingsDialog::buttonClicked(QAbstractButton *button)
@@ -59,16 +62,33 @@ namespace Avogadro {
   {
     m_mainWindow->setPainterQuality(ui.qualitySlider->value());
     m_mainWindow->setTabbedTools(ui.tabbedToolsCheck->isChecked());
-    m_mainWindow->setRenderAxes(ui.renderAxes->isChecked());
-    m_mainWindow->setRenderDebug(ui.renderDebug->isChecked());
   }
 
   void SettingsDialog::loadValues()
   {
     ui.qualitySlider->setValue(m_mainWindow->painterQuality());
+    qualityChanged(m_mainWindow->painterQuality());
     ui.tabbedToolsCheck->setChecked(m_mainWindow->tabbedTools());
-    ui.renderAxes->setChecked(m_mainWindow->renderAxes());
-    ui.renderDebug->setChecked(m_mainWindow->renderDebug());
+  }
+
+  void SettingsDialog::qualityChanged(int value)
+  {
+    switch (value)
+    {
+      case 0:
+      case 1:
+        ui.qualityValueLabel->setText("Low");
+        break;
+      case 2:
+        ui.qualityValueLabel->setText("Medium");
+        break;
+      case 3:
+      case 4:
+        ui.qualityValueLabel->setText("High");
+        break;
+      default:
+        ui.qualityValueLabel->setText("Undefined");
+    }
   }
 
 } // end namespace Avogadro
